# WaveEnv

./: .dockerignore  .gitignore  DOCKER_QUICKSTART.md  Dockerfile  README.Docker.md  README.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  docker-start.bat  docker-start.sh  docker-stop.bat  docker-stop.sh  env.example  pytest.ini
backend/: .dockerignore  Dockerfile  README.md  cleanup_and_restart.bat  cleanup_connections.bat  cleanup_connections.ps1  cleanup_connections.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  test_service.py  validate_code.py  wave_animation.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  query.py  router.py  simulation.py
backend/app/core/: __init__.py  config.py  storage.py  task_manager.py
backend/app/models/: __init__.py  grid.py  simulation.py  spectrum.py  wind.py
backend/app/schemas/: __init__.py  api.py  base.py  data.py
backend/app/services/: __init__.py  interpolation.py  simulation.py  simulation_stream.py  spectrum.py  wind.py
backend/app/utils/: __init__.py  coordinate.py  numerical.py
docs/: Python38兼容性说明.md  README.md  Streamlit前端实现计划.md  Streamlit迁移总结.md  前端实现计划-精炼版.md  后端实现流程规划.md  接口文档.yaml  测试命令.md  测试总结.md  测试执行报告.md  测试指南.md  简易需求文档.md  需求文档V1.md
frontend/: .dockerignore  Dockerfile  README.md  README_启动说明.md  app.py  package.json  requirements.txt  run.bat  run.ps1  test_backend_connection.py  test_backend_connection_simple.py  test_imports.py
frontend/utils/: __init__.py  (+3 more)
tests/: README.md  conftest.py
(+7 files in other folders)
