[project]
name = "waveenv-backend"
version = "0.1.0"
description = "时变海浪环境模型后端服务（FastAPI）"
authors = [
  { name = "WaveEnv", email = "example@example.com" }
]
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=1.10.0,<2.0.0",
  "pydantic-settings>=1.10.0,<2.0.0",
  "numpy>=1.21.0,<1.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


